--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,15 +1,12 @@
 version: v2
 managed:
   enabled: true
-  override:
-    - file_option: go_package_prefix
-      value: protos
 plugins:
   - remote: buf.build/protocolbuffers/go:v1.36.5
-    out: .
+    out: protos/
     opt:
-      - paths=import
+      - paths=source_relative
   - remote: buf.build/grpc/go:v1.5.1
-    out: .
+    out: protos/
     opt:
-      - paths=import
+      - paths=source_relative
