--- a/.local/certificate.yaml
+++ b/.local/certificate.yaml
@@ -1,8 +1,16 @@
 apiVersion: cert-manager.io/v1
+kind: Issuer
+metadata:
+  name: selfsigned
+  namespace: default
+spec:
+  selfSigned: {}
+---
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: demo-cert
-  namespace: tlscert
+  namespace: default
   labels:
     api.tlscert.dev/pool: manual
 spec:
