--- a/.local/k8s.yaml
+++ b/.local/k8s.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: backend
     spec:
+      serviceAccountName: tlscert
       containers:
       - name: backend
         image: backend
