--- a/mise.toml
+++ b/mise.toml
@@ -30,3 +30,6 @@ run = ["ctlptl apply -f .local/clusters.yaml", "tilt up"]
 
 [tasks."local:down"]
 run = "ctlptl delete -f .local/clusters.yaml"
+
+[tasks."client"]
+run = "go run github.com/tlscert/tlscert/client"
